--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-
 pandas>=1.3.0
 numpy>=1.21.0
 matplotlib>=3.4.0
@@ -8,4 +7,4 @@ scikit-learn>=1.0.0
 streamlit>=1.28.0
 plotly>=5.0.0
 tabulate>=0.9.0
-openpyxl>=3.0.
+openpyxl>=3.0.0
